--- a/index_TA_dash2.html
+++ b/index_TA_dash2.html
@@ -97,7 +97,7 @@ rect:hover {  fill:black; }
 .legend td{
     padding:4px 5px;
     vertical-align:bottom;
-    font-size: 14px;
+    font-size: 12px;
 
 }
 .legendFreq, .legendPerc{
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Number of Temporary Activities in Certain Fields of Work, by NGOs&rsquo; Country/Region of Origin, January-June 2017</h1></div>
+<div id="header"><h1>Number of Temporary Activities in Certain Fields of Work, by NGOs&rsquo; Country/Region of Origin, January-July 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -189,11 +189,11 @@ padding:0px;
 
 function dashboard(id, fData){
     var barColor = '#666666';
-    function segColor(c){ return {Aging:"#520010", Agriculture:"#7a0018", Animals:"#a30021", Culture:"#cc0029", Capacity:"#f50031", Disabilities:"#ff1f4b", Disaster:"#ff476c", Development:"#ff708d", Education:"#ff99ad", Energy:"#ffc2ce", Environment:"#ff335c", Ethnic:"#0b536f", Health:"#0f6f95", Infrastructure:"#128aba", International:"#16a6df", Labor:"#33b7eb", Law:"#58c4ee", Media:"#6acaf0", Poverty:"#7dd1f2", Rural:"#a2def6", Sport:"#c7ebf9", Technology:"#231f1f", Tourism:"#555555", Trade:"#999999", Women:"#d8d8d8", Youth:"#f2f2f2"
+    function segColor(c){ return {Aging:"#520010", Agriculture:"#7a0018", Animals:"#a30021", Culture:"#cc0029", Capacity:"#f50031", Disabilities:"#ff1f4b", Disaster:"#ff476c", Development:"#ff708d", Education:"#ff99ad", Energy:"#ffc2ce", Environment:"#ff335c", Ethnic:"#0b536f", Health:"#0f6f95", Infrastructure:"#128aba", International:"#16a6df", Labor:"#33b7eb", Law:"#58c4ee", Media:"#6acaf0", Poverty:"#7dd1f2", Religion: "#0d6182", Rural:"#a2def6", Sport:"#c7ebf9", Technology:"#231f1f", Tourism:"#555555", Trade:"#999999", Women:"#d8d8d8", Youth:"#f2f2f2"
   }[c]; }
 
     // compute total for each state.
-    fData.forEach(function(d){d.total=d.freq.Aging+d.freq.Agriculture+d.freq.Animals+d.freq.Culture+d.freq.Capacity+d.freq.Disabilities+d.freq.Disaster+d.freq.Development+d.freq.Education+d.freq.Energy+d.freq.Environment+d.freq.Ethnic+d.freq.Health+d.freq.Infrastructure+d.freq.International+d.freq.Labor+d.freq.Law+d.freq.Media+d.freq.Poverty+d.freq.Rural+d.freq.Sport+d.freq.Technology+d.freq.Tourism+d.freq.Trade+d.freq.Women+d.freq.Youth;});
+    fData.forEach(function(d){d.total=d.freq.Aging+d.freq.Agriculture+d.freq.Animals+d.freq.Culture+d.freq.Capacity+d.freq.Disabilities+d.freq.Disaster+d.freq.Development+d.freq.Education+d.freq.Energy+d.freq.Environment+d.freq.Ethnic+d.freq.Health+d.freq.Infrastructure+d.freq.International+d.freq.Labor+d.freq.Law+d.freq.Media+d.freq.Poverty+d.freq.Religion+d.freq.Rural+d.freq.Sport+d.freq.Technology+d.freq.Tourism+d.freq.Trade+d.freq.Women+d.freq.Youth;});
 
     // function to handle histogram.
     //USE THIS AREA TO ADJUST LOCATION OF X AXIS AND MAX BAR HEIGHT
@@ -407,7 +407,7 @@ var tooltip = d3.select("body").append("div").attr("class", "toolTip");
     }
 
     // calculate total frequency by segment for all state.
-    var tF = ['Aging','Agriculture','Animals','Culture','Capacity','Disabilities','Disaster','Development','Education','Energy','Environment','Ethnic','Health','Infrastructure','International','Labor','Law','Media','Poverty','Rural','Sport','Technology','Tourism','Trade','Women','Youth'].map(function(d){
+    var tF = ['Aging','Agriculture','Animals','Culture','Capacity','Disabilities','Disaster','Development','Education','Energy','Environment','Ethnic','Health','Infrastructure','International','Labor','Law','Media','Poverty','Religion','Rural','Sport','Technology','Tourism','Trade','Women','Youth'].map(function(d){
         return {type:d, freq: d3.sum(fData.map(function(t){ return t.freq[d];}))};
     });
 
@@ -440,7 +440,7 @@ var freqData=[
 	Disabilities: 0,
 	Disaster: 0,
 	Development: 0,
-	Education: 0,
+	Education: 1,
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
@@ -451,13 +451,14 @@ var freqData=[
 	Law: 0,
   	Media: 0,
 	Poverty: 0,
+  Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
 	Trade: 0,
 	Women: 0,
-	Youth: 0}},
+	Youth: 2}},
 {
 	origin: "Canada",
   freq:{
@@ -480,6 +481,7 @@ var freqData=[
 	Law: 0,
   	Media: 0,
 	Poverty: 0,
+  Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -509,6 +511,7 @@ var freqData=[
 	Law: 0,
   	Media: 0,
 	Poverty: 0,
+  Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -523,57 +526,59 @@ var freqData=[
   Agriculture: 0,
   Animals: 0,
   Culture: 0,
-  Capacity: 0,
-  Disabilities: 1,
+  Capacity: 2,
+  Disabilities: 2,
   Disaster: 0,
-  Development: 0,
-  Education: 2,
+  Development: 2,
+  Education: 5,
   Energy: 0,
-  Environment: 1,
+  Environment: 3,
   Ethnic: 0,
   Health: 0,
   Infrastructure: 1,
   International: 3,
-  Labor: 1,
+  Labor: 3,
   Law: 0,
   Media: 0,
-  Poverty: 1,
-  Rural: 2,
+  Poverty: 2,
+  Religion: 0,
+  Rural: 3,
   Sport: 0,
-  Technology: 1,
+  Technology: 2,
   Tourism: 0,
   Trade: 1,
-  Women: 0,
-  Youth: 1}},
+  Women: 1,
+  Youth: 2}},
 {
 	origin: "Hong Kong",
   freq:{
-	Aging: 2,
+	Aging: 3,
 	Agriculture: 2,
 	Animals: 0,
 	Culture: 1,
-	Capacity: 7,
-	Disabilities: 0,
-	Disaster: 14,
+	Capacity: 8,
+	Disabilities: 2,
+	Disaster: 17,
 	Development: 0,
-	Education: 24,
+	Education: 32,
 	Energy: 1,
 	Environment: 7,
 	Ethnic: 1,
-	Health: 6,
-	Infrastructure: 6,
+	Health: 7,
+	Infrastructure: 12,
 	International: 0,
 	Labor: 0,
 	Law: 0,
   	Media: 0,
 	Poverty: 19,
-	Rural: 5,
+  Religion: 0,
+	Rural: 6,
 	Sport: 1,
 	Technology: 0,
 	Tourism: 0,
 	Trade: 0,
-	Women: 2,
-	Youth: 28}},
+	Women: 3,
+	Youth: 38}},
 {
 	origin: "Japan",
   freq:{
@@ -596,6 +601,7 @@ var freqData=[
 	Law: 0,
   	Media: 0,
 	Poverty: 0,
+  Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -603,6 +609,37 @@ var freqData=[
 	Trade: 0,
 	Women: 0,
 	Youth: 0}},
+  {
+  	origin: "Kuwait",
+    freq:{
+  	Aging: 0,
+  	Agriculture: 0,
+  	Animals: 0,
+  	Culture: 0,
+  	Capacity: 0,
+  	Disabilities: 0,
+  	Disaster: 0,
+  	Development: 0,
+  	Education: 0,
+  	Energy: 0,
+  	Environment: 0,
+  	Ethnic: 0,
+  	Health: 0,
+  	Infrastructure: 0,
+  	International: 0,
+  	Labor: 0,
+  	Law: 0,
+    	Media: 0,
+  	Poverty: 1,
+    Religion: 0,
+  	Rural: 0,
+  	Sport: 0,
+  	Technology: 0,
+  	Tourism: 2,
+  	Trade: 0,
+  	Women: 0,
+  	Youth: 0}},
+
 {
 	origin: "Macau",
   freq:{
@@ -618,13 +655,14 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
-	Health: 0,
+	Health: 1,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
   	Media: 0,
 	Poverty: 0,
+  Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -654,6 +692,7 @@ var freqData=[
 	Law: 0,
   	Media: 0,
 	Poverty: 0,
+  Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -683,6 +722,7 @@ var freqData=[
 	Law: 0,
   	Media: 0,
 	Poverty: 0,
+  Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
@@ -690,6 +730,36 @@ var freqData=[
 	Trade: 0,
 	Women: 0,
 	Youth: 0}},
+  {
+  	origin: "Switzerland",
+    freq:{
+  	Aging: 0,
+  	Agriculture: 0,
+  	Animals: 0,
+  	Culture: 0,
+  	Capacity: 0,
+  	Disabilities: 0,
+  	Disaster: 0,
+  	Development: 0,
+  	Education: 0,
+  	Energy: 0,
+  	Environment: 0,
+  	Ethnic: 0,
+  	Health: 0,
+  	Infrastructure: 0,
+  	International: 1,
+  	Labor: 0,
+  	Law: 0,
+    	Media: 0,
+  	Poverty: 0,
+    Religion: 0,
+  	Rural: 0,
+  	Sport: 0,
+  	Technology: 0,
+  	Tourism: 2,
+  	Trade: 0,
+  	Women: 0,
+  	Youth: 0}},
 {
 	origin: "Taiwan",
   freq:{
@@ -712,13 +782,14 @@ var freqData=[
 	Law: 0,
   	Media: 0,
 	Poverty: 0,
+  Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
 	Trade: 1,
 	Women: 0,
-	Youth: 1}},
+	Youth: 2}},
   {
   	origin: "Thailand",
     freq:{
@@ -741,6 +812,7 @@ var freqData=[
   	Law: 0,
     	Media: 0,
   	Poverty: 0,
+    Religion: 0,
   	Rural: 1,
   	Sport: 0,
   	Technology: 0,
@@ -770,6 +842,7 @@ var freqData=[
   Law: 0,
   Media: 0,
   Poverty: 0,
+  Religion: 0,
   Rural: 2,
   Sport: 0,
   Technology: 0,
@@ -799,6 +872,7 @@ var freqData=[
   Law: 0,
   Media: 0,
   Poverty: 1,
+  Religion: 0,
   Rural: 0,
   Sport: 0,
   Technology: 0,
@@ -813,28 +887,29 @@ var freqData=[
   Agriculture: 0,
   Animals: 2,
   Culture: 1,
-  Capacity: 0,
-  Disabilities: 4,
-  Disaster: 0,
+  Capacity: 2,
+  Disabilities: 7,
+  Disaster: 1,
   Development: 0,
-  Education: 3,
+  Education: 6,
   Energy: 0,
-  Environment: 2,
+  Environment: 4,
   Ethnic: 0,
-  Health: 5,
+  Health: 8,
   Infrastructure: 1,
-  International: 2,
+  International: 3,
   Labor: 1,
   Law: 0,
   Media: 1,
   Poverty: 2,
+  Religion: 1,
   Rural: 0,
   Sport: 0,
   Technology: 2,
   Tourism: 0,
-  Trade: 0,
-  Women: 1,
-  Youth: 9}},
+  Trade: 1,
+  Women: 2,
+  Youth: 13}},
   {
   	origin: "Vietnam",
     freq:{
@@ -846,7 +921,7 @@ var freqData=[
     Disabilities: 0,
     Disaster: 0,
     Development: 0,
-    Education: 1,
+    Education: 2,
     Energy: 0,
     Environment: 0,
     Ethnic: 0,
@@ -857,6 +932,7 @@ var freqData=[
     Law: 0,
     Media: 0,
     Poverty: 0,
+    Religion: 0,
     Rural: 0,
     Sport: 0,
     Technology: 0,
@@ -871,7 +947,6 @@ dashboard('#dashboard',freqData);
 
 d3.select("body").append("div")
 .attr("class", "tooltip1")
-.html("<em><ul><li>Each temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period. We designated fields based on the activity titles listed on the Ministry of Public Security website.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>Only one country or region of origin for each organization is included, based on organizations’ public information.</li><li>Some fields of work have been abbreviated here: Animal Protection is shortened to Animals, Arts and Culture to Culture, Civil Society Capacity-Building to Capacity, Disaster Relief to Disaster, Economic Development to Development, Ethnic Affairs to Ethnic, International Relations/Exchange to International, Labor and Migrants to Labor, Law and Governance to Law, Poverty Alleviation to Poverty, Rural Issues/Development to Rural, and Women’s Issues to Women.</li></ul></em>");
+.html("<em><ul><li>Each temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period. We designated fields based on the activity titles listed on the Ministry of Public Security website.</li><li>Only activities that began on or before July 31, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>Only one country or region of origin for each organization is included, based on organizations’ public information.</li><li>Some fields of work have been abbreviated here: Animal Protection is shortened to Animals, Arts and Culture to Culture, Civil Society Capacity-Building to Capacity, Disaster Relief to Disaster, Economic Development to Development, Ethnic Affairs to Ethnic, International Relations/Exchange to International, Labor and Migrants to Labor, Law and Governance to Law, Poverty Alleviation to Poverty, Rural Issues/Development to Rural, and Women’s Issues to Women.</li></ul></em>");
 
 </script>
-
