--- a/index.html
+++ b/index.html
@@ -1612,7 +1612,27 @@
           "website_ch": "http://www2.hss.de/china/ch/home.html"
         }
       },
-
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+118.604621, 25.190820
+]
+},
+"properties": {
+"orgname_en": "Harvest Charity Foundation Limited",
+"orgname_ch": "丰收慈善基金有限公司",
+"psu_en": "Fujian Department of Civil Affairs",
+"originloc": "Hong Kong",
+"sector": "Youth, Labor and Migrants",
+"regloc": "Fujian",
+"regdate": "August 11, 2017",
+"actarea": "Fujian",
+"website_en": "http://www.harvestcharity.org.hk/en/",
+"website_ch": "http://www.harvestcharity.org.hk/"
+}
+},
 
       {
         "type": "Feature",
@@ -1947,7 +1967,27 @@
           "website_ch": "http://china.inta.org/"
         }
       },
-
+{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+109.314239, 40.456820
+]
+},
+"properties": {
+"orgname_en": "The Japan Association for Greening Deserts",
+"orgname_ch": "特定非营利活动法人日本沙漠绿化实践协会",
+"psu_en": "Inner Mongolia Forestry Administration",
+"originloc": "Japan",
+"sector": "Environment",
+"regloc": "Inner Mongolia",
+"regdate": "August 11, 2017",
+"actarea": "Inner Mongolia"
+}
+},
+      
+      
       {
         "type": "Feature",
         "geometry": {
