--- a/index_registeredofficestable.html
+++ b/index_registeredofficestable.html
@@ -85,8 +85,7 @@ font-style: italic;
 <!–– add your tableizer data below this line––>
 
 
-
-<thead><tr class="tableizer-firstrow"><th>orgname_eng</th><th>orgname_ch</th><th>originloc</th><th>sector_eng</th><th>psu_eng</th><th>regloc</th><th>regdate</th><th>actarea_eng</th></tr></thead><tbody>
+<thead><tr class="tableizer-firstrow"><th>Organization Name</th><th>Organization Name (Chinese)</th><th>Organization Origin</th><th>Field of Work</th><th>Professional Supervisory Unit</th><th>Registration Location</th><th>Date of Registration</th><th>Permitted Area(s) of Operation</th></tr></thead><tbody>
  <tr><td>Canada China Business Council</td><td>加拿大加中贸易理事会</td><td>Canada</td><td>Trade</td><td>Shanghai Commission of Commerce</td><td>Shanghai</td><td>2017-01-17</td><td>Shanghai, Jiangsu, Zhejiang, Anhui, Fujian, Jiangxi, Guangdong, Guangxi, Hainan, Guizhou, Yunnan</td></tr>
  <tr><td>Confederation of Indian Industry</td><td>印度工业联合会</td><td>India</td><td>Trade</td><td>Shanghai Commission of Commerce</td><td>Shanghai</td><td>2017-01-17</td><td>China</td></tr>
  <tr><td>Project HOPE (Shanghai)</td><td>世界健康基金会</td><td>United States</td><td>Health, Poverty Alleviation, Disaster Relief</td><td>Shanghai Health and Family Planning Commission</td><td>Shanghai</td><td>2017-01-17</td><td>Shanghai, Inner Mongolia, Heilongjiang, Jiangsu, Zhejiang, Anhui, Fujian, Shandong, Guangdong, Guangxi, Sichuan, Guizhou, Yunnan, Tibet, Qinghai, Xinjiang</td></tr>
