--- a/index_TA_dash2_2017-06-30.html
+++ b/index_TA_dash2_2017-06-30.html
@@ -561,7 +561,7 @@ var freqData=[
 	Environment: 7,
 	Ethnic: 1,
 	Health: 6,
-	Infrastructure: 5,
+	Infrastructure: 6,
 	International: 0,
 	Labor: 0,
 	Law: 0,
@@ -603,6 +603,36 @@ var freqData=[
 	Trade: 0,
 	Women: 0,
 	Youth: 0}},
+	{
+	origin: "Macau",
+  freq:{
+  Aging: 0,
+  Agriculture: 0,
+  Animals: 0,
+  Culture: 0,
+  Capacity: 0,
+  Disabilities: 0,
+  Disaster: 0,
+  Development: 0,
+  Education: 1,
+  Energy: 0,
+  Environment: 0,
+  Ethnic: 0,
+  Health: 0,
+  Infrastructure: 0,
+  International: 0,
+  Labor: 0,
+  Law: 0,
+  Media: 0,
+  Poverty: 0,
+  Rural: 0,
+  Sport: 0,
+  Technology: 0,
+  Tourism: 0,
+  Trade: 0,
+  Women: 0,
+  Youth: 1}},
+	
 {
 	origin: "South Korea",
   freq:{
@@ -726,10 +756,10 @@ var freqData=[
   Agriculture: 2,
   Animals: 0,
   Culture: 0,
-  Capacity: 2,
+  Capacity: 3,
   Disabilities: 0,
   Disaster: 0,
-  Development: 0,
+  Development: 1,
   Education: 0,
   Energy: 0,
   Environment: 0,
@@ -788,7 +818,7 @@ var freqData=[
   Disabilities: 4,
   Disaster: 0,
   Development: 0,
-  Education: 2,
+  Education: 3,
   Energy: 0,
   Environment: 2,
   Ethnic: 0,
@@ -805,7 +835,7 @@ var freqData=[
   Tourism: 0,
   Trade: 0,
   Women: 1,
-  Youth: 8}},
+  Youth: 9}},
   {
   	origin: "Vietnam",
     freq:{
