--- a/index_TA_by_prov_2017-06-30.html
+++ b/index_TA_by_prov_2017-06-30.html
@@ -161,12 +161,12 @@ var pie = new d3pie("pieChart", {
       },
       {
         "label": "Yunnan",
-        "value": 9,
+        "value": 10,
         "color": "#e0002d"
       },
       {
 				"label": "Beijing",
-				"value": 8,
+				"value": 9,
 				"color": "#666666"
 			},
 			{
@@ -243,6 +243,11 @@ var pie = new d3pie("pieChart", {
         "label": "Liaoning",
         "value": 1,
         "color": "#cc0029"
+      },
+			      {
+        "label": "Ningxia",
+        "value": 1,
+        "color": "#e6e6e6"
       },
       {
         "label": "Xinjiang",
