--- a/index_RO_by_sector_2017-06-30.html
+++ b/index_RO_by_sector_2017-06-30.html
@@ -141,116 +141,127 @@ var pie = new d3pie("pieChart", {
 	"data": {
 		"sortOrder": "value-desc",
 		"content": [
+			
+			{
+				"label": "Trade",
+				"value": 67,
+				"color": "#666666"
+			},
+						{
+				"label": "Education",
+				"value": 33,
+				"color": "#f2f2f2"
+			},
+			      {
+        "label": "Health",
+        "value": 29,
+        "color": "#d8d8d8"
+      },
 			{
 				"label": "Youth",
-				"value": 37,
+				"value": 28,
 				"color": "#7a0018"
 			},
-			{
-				"label": "Education",
-				"value": 28,
-				"color": "#f2f2f2"
+				{
+				"label": "Disaster Relief",
+				"value": 22,
+				"color": "#cc0029"
+			},			
+      {
+				"label": "International Relations",
+				"value": 19,
+				"color": "#ff708d"
 			},
 			{
 				"label": "Poverty Alleviation",
-				"value": 22,
+				"value": 19,
 				"color": "#ff859d"
 			},
-			{
-				"label": "Disaster Relief",
-				"value": 13,
-				"color": "#cc0029"
-			},
-      {
-        "label": "Health",
-        "value": 13,
-        "color": "#d8d8d8"
-      },
+		
+
       {
         "label": "Environment",
-        "value": 11,
+        "value": 17,
         "color": "#ff1f4b"
+      },
+			      {
+        "label": "Economic Development",
+        "value": 14,
+        "color": "#666666"
       },
       {
         "label": "Civil Society Capacity-Building",
-        "value": 9,
+        "value": 10,
         "color": "#999999"
       },
-      {
-				"label": "Rural Issues/Development",
+			      {
+				"label": "Arts and Culture",
 				"value": 9,
-				"color": "#8f001d"
+				"color": "#a30021"
 			},
-      {
-				"label": "International Relations/Exchange",
-				"value": 8,
-				"color": "#ff708d"
+			      {
+        "label": "Disabilities",
+        "value": 5,
+        "color": "#ffc2ce"
+      },
+						{
+				"label": "Labor and Migrants",
+				"value": 5,
+				"color": "#cccccc"
 			},
-      {
+						{
+				"label": "Women’s Issues",
+				"value": 5,
+				"color": "#e6e6e6"
+			},
+			
+			      {
 				"label": "Infrastructure",
-				"value": 7,
+				"value": 4,
 				"color": "#555555"
 			},
       {
-        "label": "Disabilities",
-        "value": 6,
-        "color": "#ffc2ce"
-      },
-      {
-				"label": "Agriculture",
-				"value": 4,
-				"color": "#231f1f"
-			},
-      {
-				"label": "Arts and Culture",
-				"value": 4,
-				"color": "#a30021"
-			},
-			{
-				"label": "Women’s Issues",
+				"label": "Rural Issues/Development",
 				"value": 3,
-				"color": "#e6e6e6"
+				"color": "#8f001d"
 			},
+
 			{
-				"label": "Aging",
-				"value": 2,
-				"color": "#ffd6de"
+				"label": "Technology",
+				"value": 3,
+				"color": "#ff476c"
 			},
+
 			{
 				"label": "Animal Protection",
 				"value": 2,
 				"color": "#f50031"
 			},
-			{
-				"label": "Labor and Migrants",
-				"value": 2,
-				"color": "#cccccc"
+      {
+        "label": "Ethnic Affairs",
+        "value": 2,
+        "color": "#ff99ad"
+      },
+      {
+				"label": "Agriculture",
+				"value": 1,
+				"color": "#231f1f"
 			},
+
+
 			{
-				"label": "Technology",
-				"value": 2,
-				"color": "#ff476c"
+				"label": "Aging",
+				"value": 1,
+				"color": "#ffd6de"
 			},
-			{
-				"label": "Trade",
-				"value": 2,
-				"color": "#666666"
-			},
+
+
       {
 				"label": "Energy",
 				"value": 1,
 				"color": "#e0002d"
 			},
-      {
-        "label": "Ethnic Affairs",
-        "value": 1,
-        "color": "#ff99ad"
-      },
-      {
-        "label": "Media",
-        "value": 1,
-        "color": "#3c3c3c"
-      },
+
       {
         "label": "Sport",
         "value": 1,
