--- a/index_RO_dash2.html
+++ b/index_RO_dash2.html
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Number of Representative Offices in Certain Fields of Work, by NGOs’ Country/Region of Origin, January-July 2017</h1></div>
+<div id="header"><h1>Number of Representative Offices in Certain Fields of Work, by NGOs’ Country/Region of Origin, January-August 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -458,6 +458,35 @@ var freqData=[
 	Trade: 1,
 	Women: 0,
 	Youth: 1}},
+	{
+	origin: "Belgium",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 1,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 1,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 1,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 0}},
 {
 	origin: "Canada",
 	freq:{
@@ -473,20 +502,20 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
-	Health: 0,
+	Health: 1,
 	Infrastructure: 0,
-	International: 0,
+	International: 1,
 	Labor: 0,
 	Law: 0,
 	Poverty: 0,
   Religion: 0,
-	Rural: 0,
+	Rural: 1,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 2,
+	Trade: 3,
 	Women: 0,
-	Youth: 0}},
+	Youth: 1}},
 {
 	origin: "Denmark",
 	freq:{
@@ -580,19 +609,19 @@ var freqData=[
 	Aging: 1,
 	Agriculture: 0,
 	Animals: 0,
-	Culture: 6,
+	Culture: 7,
 	Capacity: 6,
 	Disabilities: 3,
 	Disaster: 20,
 	Development: 0,
-	Education: 15,
+	Education: 16,
 	Energy: 0,
-	Environment: 1,
+	Environment: 2,
 	Ethnic: 1,
 	Health: 9,
 	Infrastructure: 5,
-	International: 5,
-	Labor: 4,
+	International: 6,
+	Labor: 5,
 	Law: 0,
 	Poverty: 14,
   Religion: 0,
@@ -600,9 +629,9 @@ var freqData=[
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 7,
+	Trade: 8,
 	Women: 0,
-	Youth: 17}},
+	Youth: 18}},
 {
 	origin: "India",
 	freq:{
@@ -632,6 +661,36 @@ var freqData=[
 	Trade: 1,
 	Women: 0,
 	Youth: 0}},
+	{
+	origin: "Italy",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 1,
+	Disaster: 0,
+	Development: 0,
+	Education: 1,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 1,
+	Infrastructure: 0,
+	International: 1,
+	Labor: 1,
+	Law: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 0,
+	Women: 0,
+	Youth: 0}},
+
 {
 	origin: "Japan",
 	freq:{
@@ -657,8 +716,8 @@ var freqData=[
 	Rural: 0,
 	Sport: 0,
 	Technology: 1,
-	Tourism: 1,
-	Trade: 13,
+	Tourism: 2,
+	Trade: 16,
 	Women: 0,
 	Youth: 0}},
 {
@@ -687,7 +746,7 @@ var freqData=[
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 0,
+	Trade: 1,
 	Women: 0,
 	Youth: 1}},
 {
@@ -806,6 +865,35 @@ var freqData=[
 	Trade: 1,
 	Women: 0,
 	Youth: 0}},
+		{
+	origin: "Singapore",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+  Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 0}},
 {
 	origin: "South Korea",
 	freq:{
@@ -871,20 +959,20 @@ var freqData=[
 	Agriculture: 0,
 	Animals: 0,
 	Culture: 0,
-	Capacity: 0,
+	Capacity: 1,
 	Disabilities: 0,
-	Disaster: 1,
+	Disaster: 2,
 	Development: 1,
-	Education: 1,
+	Education: 2,
 	Energy: 0,
 	Environment: 2,
 	Ethnic: 0,
-	Health: 1,
+	Health: 2,
 	Infrastructure: 0,
 	International: 1,
 	Labor: 0,
 	Law: 0,
-	Poverty: 1,
+	Poverty: 2,
   Religion: 0,
 	Rural: 1,
 	Sport: 1,
@@ -892,7 +980,7 @@ var freqData=[
 	Tourism: 0,
 	Trade: 2,
 	Women: 1,
-	Youth: 1}},
+	Youth: 2}},
 {
 	origin: "Taiwan",
 	freq:{
@@ -1006,7 +1094,7 @@ var freqData=[
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 3,
+	Trade: 4,
 	Women: 0,
 	Youth: 1}},
 {
@@ -1014,30 +1102,30 @@ var freqData=[
 	freq:{
 	Aging: 0,
 	Agriculture: 0,
-	Animals: 2,
+	Animals: 3,
 	Culture: 2,
 	Capacity: 4,
-	Disabilities: 3,
+	Disabilities: 4,
 	Disaster: 5,
 	Development: 5,
 	Education: 13,
 	Energy: 1,
-	Environment: 9,
+	Environment: 10,
 	Ethnic: 0,
-	Health: 13,
+	Health: 14,
 	Infrastructure: 1,
-	International: 5,
+	International: 6,
 	Labor: 0,
 	Law: 0,
-	Poverty: 4,
+	Poverty: 5,
   Religion: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 1,
 	Tourism: 1,
-	Trade: 19,
+	Trade: 20,
 	Women: 3,
-	Youth: 8}}
+	Youth: 9}}
 ]
 ;
 
